Fix gap in scrolling map

--- a/css/main.scss
+++ b/css/main.scss
@@ -171,8 +171,9 @@ h1.landing-page {
 	.musical-notes-map {
 		background-image: url('../img/world_map_bg.png');
 		height: 100%;
+		margin-left: -1010em;
 		position: absolute;
-		width: 100%;
+		width: 5000em;
 		z-index: -1;
 	    -webkit-animation: moveSlideshow 20s linear infinite normal forwards;
 	    -moz-animation:    moveSlideshow 20s linear infinite normal forwards;
@@ -183,14 +184,14 @@ h1.landing-page {
 	}
 }
 
-@-webkit-keyframes moveSlideshow {
-    0% { left: 0; }
-    100% { left: 1010px; }
-}
-@-moz-keyframes moveSlideshow {
-    0% { left: 0; }
-    100% { left: 1010px; }
-}
+		@-webkit-keyframes moveSlideshow {
+		    0% { left: 0; }
+		    100% { left: 1010px; }
+		}
+		@-moz-keyframes moveSlideshow {
+		    0% { left: 0; }
+		    100% { left: 1010px; }
+		}
 
 #stage {
 	background-color: $musiclaps-dark-gray;
